Fix mobile home (#58)
## Description

- Fix menu overlap
- Add padding for photos on home
- Change home title from index to home

--- a/web/templates/_components/portfolio_menu.css
+++ b/web/templates/_components/portfolio_menu.css
@@ -7,7 +7,7 @@
 }
 
 .portfolio-menu__item {
-  @apply py-2 px-2 -mx-2 cursor-pointer;
+  @apply py-2 px-2 md:-mx-2 lg:-mx-2 cursor-pointer;
   @apply border border-solid border-transparent;
 
   text-transform: capitalize;
